ingress-controller/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-python
  labels:
    app: gateway-python
spec:
  replicas: 2  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: gateway-python
  template:
    metadata:
      labels:
        app: gateway-python
    spec:
      containers:
      - name: gateway-python
        image: jianyggan/python-hello-world  # Example Python image
        ports:
        - containerPort: 5000  # Change this port to your application's port
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
  labels:
    app: gateway-python
spec:
  selector:
    app: gateway-python
  ports:
  - protocol: TCP
    port: 8081  # Expose your service on port 8081
    targetPort: 5000  # Target port of your Python application
  type: ClusterIP  # Expose the service externally
