ingress-controller/ingress-rule-hostbased.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - host: gui.com          # Hostname associated with this rule
    http:
      paths:
      - path: /                 # Path to match
        pathType: Prefix        # Type of path matching
        backend:
          service:
            name: gui-svc    # Name of the backend Service
            port:
              number: 80             # Port on the backend Service
  - host: stp.com          # Hostname associated with this rule
    http:
      paths:
      - path: /                 # Path to match
        pathType: Prefix        # Type of path matching
        backend:
          service:
            name: stp-svc    # Name of the backend Service
            port:
              number: 8080            # Port on the backend Service
  - host: gateway.com          # Hostname associated with this rule
    http:
      paths:
      - path: /                 # Path to match
        pathType: Prefix        # Type of path matching
        backend:
          service:
            name: gateway-svc    # Name of the backend Service
            port:
              number: 8081            # Port on the backend Service
